[project]
name = "urssi-docs"
version = "0.1.0"
description = "Documentation for the URSSI 2025 Summer School"
authors = [
  { name = "Tim Monko", email = "timmonko@gmail.com"},
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
]
requires-python = ">=3.10"
dependencies = [
    "mkdocs-material>=9.6.16",
    "mkdocs-jupyter",
    # not docs related
    "seaborn",
]

[project.optional-dependencies]
examples = [
	"jupyter",
	"matplotlib",
	"scikit-image[data]"
]
docs = [
	"mkdocs-material"
]

[project.urls] # Optional
"Homepage" = "https://timmonko.github.io/urssi-docs/"
"Bug Reports" = "https://github.com/timmonko/urssi-docs/issues"
"Source" = "https://github.com/timmonko/urssi-docs/"
